--- a/style/media.scss
+++ b/style/media.scss
@@ -2,17 +2,596 @@
 
     @media only screen and (max-width: 1200px) {
 
+        .container {
+            max-width: 960px;
+        }
+
         main {
+
             .about-box {
 
                 &__image, &__slider {
                     max-width: 480px;
                 }
-                // .about {
-                //     > div {
-                //         width: 480px;
-                //     }
-                // }
+
+                &__image {
+                    img {
+                        width: 100%;
+                    }
+                }
+
+                .about {
+                    .about-list {
+                        &__item {
+                            div {
+                                i {
+                                    font-size: 33px;
+                                }
+                                h5 {
+                                    font-size: 12px;
+                                } 
+                            }
+                        }
+                    }
+                    > div {
+                        width: 450px;
+                    }
+                }
+                
+            }
+
+            .expert-team {
+                .team {
+                    .team-box {
+                        max-width: 210px;
+                    }
+                }
+            }
+
+            .portfolio {
+                ul {
+                    li {
+                        max-width: 319px;
+                        .portfolio-wrap {
+                            h5 {
+                                font-size: 16px;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .marketing {
+                .container {
+                    align-items: center;
+                }
+            }
+
+            .expert {
+                .feedback {
+                    &__item {
+                        max-width: 290px;
+                    }
+                }
+            }
+
+            .princing {
+                .princing-box {
+                    &__item {
+                        div {
+                            ul {
+                                li {
+                                    margin-bottom: 11px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        footer {
+            .contact {
+
+                .contact-box {
+                    &__item {
+                        max-width: 289px;
+                    }
+                }
+
+                .contact-us {
+                    .contact-us-l {
+                        max-width: 319px;
+                    }
+                    .contact-us-r {
+                        max-width: 609px;
+                    }
+                }
+            }
+        }
+
+    }
+
+    @media only screen and (max-width: 992px) {
+        .container {
+            max-width: 720px;
+        }
+
+        .menu {
+            &__item {
+                a {
+                    padding: .3rem .5rem;
+                }
+            }
+        }
+
+        .title-box {
+            h2 {
+                font-size: 22px;
+            }
+            p {
+                font-size: 15px;
+            }
+        }
+
+        .header {
+            &__title {
+                font-size: 32px;
+            }
+            &__banner {
+                .container {
+                    p {
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+
+        button {
+            font-size: 14px;
+            padding: 8px 26px;
+        }
+
+        main {
+            .subscribe-box {
+                .container {
+                    flex-direction: column;
+                    h4 {
+                        width: 100%;
+                        text-align: center;
+                    }
+                    form {
+                        width: 100%;
+                        input {
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+            .welcome-box {
+                .list {
+                    margin: 0 -15px;
+                    &__item {
+                        max-width: 240px;
+
+                        div {
+                            padding: 20px;
+                        }
+                        h4 {
+                            font-size: 18px;
+                        }
+                    }
+                }
+            }
+            .about-box {
+                .container {
+                    flex-direction: column;
+                }
+                &__image, &__slider {
+                    max-width: 100%;
+                }
+                .about {
+                    > div {
+                        width: 100%;
+                    }
+                }
+            }
+            .ourservice {
+                .service {
+                    flex-wrap: wrap;
+                    &__item {
+                        max-width: 50%;
+                    }
+                }
+            }
+            .expert-team {
+                .team {
+                    flex-wrap: wrap;
+                    .team-box {
+                        max-width: 50%;
+                        padding: 0 15px;
+                        margin-bottom: 40px;
+
+                        &__img {
+                            width: 100px;
+                            height: 100px;
+                        }
+                        &__title {
+                            font-size: 18px;
+                            margin: 10px 0;
+                        }
+                        .coman-box {
+                            max-width: 100%;
+                        }
+                    }
+                }
+            }
+            .portfolio {
+                ul {
+                    li {
+                        max-width: 240px;
+                    }
+                }
+            }
+            .marketing {
+                &__image, &__content {
+                    width: 100%;
+                    max-width: 100%;
+                }
+                &__image {
+                    margin-bottom: 40px;
+                }
+                .container {
+                    flex-direction: column;
+                }
+            }
+            .expert {
+                .feedback {
+                    &__item {
+                        max-width: 330px;
+                    }
+                }
+            }
+            .princing {
+                .princing-box {
+                    &__item {
+                        div {
+                            button {
+                                font-size: 14px;
+                                padding: 8px 26px;
+                            }
+                        }
+                    }
+                }
+            }
+            .news {
+                .news-box {
+                    &__wrap {
+                        p {
+                            &:nth-of-type(1) {
+                                font-size: 18px;
+                                line-height: 1.2;
+                                margin-bottom: 12px;
+                            }
+                            &:nth-of-type(2) {
+                                font-size: 14px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        footer {
+            .contact {
+                .contact-box {
+                    flex-wrap: wrap;
+                    &__item {
+                        max-width: 48%;
+                        &:nth-of-type(1) {
+                            max-width: 100%;
+                            margin-bottom: 30px;
+                        }
+                    }
+                }
+                .contact-us {
+                    flex-direction: column;
+                    .contact-us-l, .contact-us-r {
+                        max-width: 100%;
+                    }
+                    .contact-us-r {
+                        margin-top: 1.5rem;
+                    }
+                }
+            }
+        }
+    }
+
+    @media only screen and (max-width: 768px) {
+
+        .container {
+            max-width: 540px;
+        }
+
+        .burger-menu {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 60%;
+            height: 100%;
+            background: #fff;
+            border: 1px solid #f6994b;
+            padding: 60px 0 15px;
+            transition: all .5s;
+            overflow: hidden;
+
+            .menu {
+                flex-direction: column;
+                &__item {
+                    a {
+                        color: #000;
+                        text-align: center;
+                        &:hover {
+                            color: #f6994b;
+                        }
+                    }
+                }
+            }
+            &.active {
+                right: 0;
+            }
+            &::before, &::after {
+                width: 50px;
+                height: 50px;
+                background: #f6994b;
+                position: absolute;
+                content: "";
+                border-radius: 100%;
+            }
+            &::before {
+                bottom: -10px;
+                right: -20px;
+            }
+            &::after {
+                top: -10px;
+                left: -10px;
+            }
+        }
+
+        .burger {
+            width: 25px;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            z-index: 9999;
+            div {
+                width: 17px;
+                height: 2px;
+                background: #f6994b;
+                margin-bottom: 4px;
+                &:nth-of-type(2) {
+                    width: 100%;
+                }
+            }
+        }
+
+        main {
+
+            .subscribe-box {
+                .container {
+                    h4 {
+                        font-size: 18px;
+                        text-align: inherit;
+                        margin-bottom: .5rem;
+                    }
+                }
+            }
+            .welcome-box {
+                .list {
+                    flex-direction: column;
+                    &__item {
+                        max-width: 100%;
+                        div {
+                            margin-bottom: 40px;
+                        }
+                    }
+                }
+            }
+            .portfolio {
+                ul {
+                    li {
+                        max-width: 270px;
+                    }
+                }
+            }
+            .expert {
+                .feedback {
+                    &__item {
+                        max-width: 100%;
+                    }
+                }
+            }
+            .princing {
+                .princing-box {
+                    flex-direction: column;
+                    &__item {
+                        max-width: 100%;
+                        div {
+                            margin-bottom: 30px;
+                        }
+                        &:last-child {
+                            div {
+                                margin-bottom: 0;
+                            }
+                        }
+                    }
+                }
+            }
+            .news {
+                .news-box {
+                    flex-direction: column;
+                    &__item {
+                        max-width: 100%;
+                    }
+                    &__img {
+                        img {
+                            max-height: 380px;
+                        }
+                    }
+                    &__wrap {
+                        margin-bottom: 40px;
+                    }
+                }
+            }
+
+        }
+
+        footer {
+            .contact {
+                .contact-box {
+                    &__item {
+                        max-width: 100%;
+                        margin-bottom: 30px;
+                        &:last-child {
+                            margin-bottom: 0;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+
+    @media only screen and (max-width: 576px) {
+
+        .container {
+            max-width: 100%;
+        }
+
+        .header {
+            height: 66vh;
+            
+            &__title {
+                font-size: 22px;
+            }
+            &__subtitle {
+                font-size: 14px;
+            }
+        }
+
+        main {
+            .subscribe-box {
+                .container {
+                    h4 {
+                        font-size: 17px;
+                    }
+                }
+            }
+            .about-box {
+
+                .about {
+                    margin-right: 0;
+                    &__title {
+                        font-size: 22px;
+                        letter-spacing: .4px;
+                    }
+                    p {
+                        font-size: 14px;
+                    }
+                    .about-list {
+                        &__item {
+                            max-width: 50%;
+
+                            div {
+                                h5 {
+                                    letter-spacing: normal;
+                                }
+                            }
+                            &:nth-of-type(2) {
+                                border-right: none;
+                            }
+                            &:nth-of-type(4) {
+                                border-bottom: 1px solid #eee;
+                                border-left: 1px solid #eee;
+                            }
+                            &:nth-of-type(5) {
+                                border-left: none;
+                            }
+                        }
+                    }
+                }
+                &__image, &__slider {
+                    padding: 0;
+                }
+
+            }
+            .ourservice {
+                .service {
+                    flex-direction: column;
+                    margin: 0 -15px;
+                    &__item {
+                        max-width: 100%;
+                    }
+                }
+            }
+            .expert-team {
+                .team {
+                    flex-direction: column;
+                    margin: 0 -15px;
+                    .team-box {
+                        max-width: 100%;
+                    }
+                }
+            }
+            .portfolio {
+                ul {
+                    li {
+                        max-width: 100%;
+                    }
+                }
+            }
+            .marketing {
+                &__image, &__content {
+                    padding: 0;
+                }
+                .marketing-box {
+                    h4 {
+                        font-size: 18px;
+                    }
+                    p {
+                        font-size: 14px;
+                    }
+                }
+            }
+        }
+
+        footer {
+            .contact {
+                .contact-us {
+
+                    .contact-us-l {
+                        ul {
+                            li {
+                                a {
+                                    width: 40px;
+                                    height: 40px;
+                                    line-height: 40px;
+                                }
+                            }
+                        }
+                    }
+                    .contact-us-r {
+                        div {
+                            flex-direction: column;
+                            input {
+                                &:first-child {
+                                    margin-bottom: 1rem;
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
 
