--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,24 @@
 @import "classes.scss";
 @import "media.scss";
 
+.addres {
+    display: flex;
+    padding: 20px 0;
+    li {
+        max-width: 210px;
+        display: flex;
+        padding: 0 7px;
+        i {
+            font-size: 32px;
+            margin-right: 15px;
+            color: #f6994b;
+        }
+        a {
+            font-weight: 700;
+        }
+    }
+}
+
 .header {
     height: 100vh;
 
@@ -8,7 +26,7 @@
         position: fixed;
         width: 100%;
         max-width: 100%;
-        top: 0;
+        top: 110px;
         left: 0;
         padding: .7rem .5rem;
         z-index: 10;
@@ -24,6 +42,7 @@
             box-shadow: 0 7px 13px 0 rgba(0, 0, 0, .1);
             // animation: fadeInDown .5s ease-in-out 0s 1 normal none running;
             animation: fadeInDown ease .5s;
+            top: 0;
 
             @keyframes fadeInDown { 
                 0% {
@@ -894,6 +913,9 @@ footer {
                         background-clip: padding-box;
                         border: 1px solid #ced4da;
                         border-radius: .25rem;
+                        &:first-child {
+                            margin-right: 15px;
+                        }
                     }
                 }
 
@@ -929,6 +951,45 @@ footer {
 
             }
 
+        }
+    }
+    .privacy {
+        padding: 25px 0;
+        background: #000;
+        
+        .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        p {
+            font-size: 15px;
+            color: #fff;
+        }
+        ul {
+            display: flex;
+            li {
+                a {
+                    color: #fff;
+                    padding: .75rem 1.25rem;
+                }
+                &:last-child {
+                    a {
+                        position: relative;
+                        &:before {
+                            content: "";
+                            position: absolute;
+                            left: 0;
+                            top: 50%;
+                            transform: translateY(-50%);
+                            background: #fff;
+                            width: 2px;
+                            height: 15px;
+                        }
+                        
+                    }
+                }
+            }
         }
     }
 }
